Desafio modulo 2 es6

--- a/curso-es6/public/index.html
+++ b/curso-es6/public/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="novoTodo">Adicionar</button>
+    <div id="tela"></div>
     <script src="./bundle.js"></script>
 </body>
 </html>
